...
import org.xmlpull.v1.XmlPullParserException
import java.io.IOException

enum class RssSource(val title: String, val url: String, val header: String = title) {

    AUDIOBOOM(
        "Episodios",
        "https://audioboom.com/channels/3716163.rss",
        "En Caso De Que El Mundo Se Desintegre"
    ),
    CANALTRANS("Noticias", "https://canaltrans.com/rss/transrss.xml", "Noticias CanalTrans"),
}

...
